# SRSLI

./: CMakeLists.txt  README.md
src/C++/: AlignmentRecord.cpp  AlignmentRecord.hpp  ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  FindSeeds.hpp  ReferenceSet.cpp  ReferenceSet.hpp  ReferenceSetImpl.hpp  SeedIntervals.cpp  SeedIntervals.h  SeedIntervals.hpp  SeqAnConfig.hpp  Sequence.cpp  Sequence.hpp  SequenceReader.cpp  SequenceReader.hpp  SmithWaterman.cpp  SmithWaterman.hpp  SparseAlignment.cpp  SparseAlignment.hpp  SparseAlignment2.cpp  SrsliParameters.hpp  Types.hpp  Utils.cpp  Utils.hpp  Version.cpp  Version.hpp  main.cpp
src/C++/config/: SeqAnConfig.hpp  Types.hpp
src/C++/parameters/: SrsliParameters.hpp  Version.hpp
src/C++/utils/: Align.cpp  ReferencedSeedChain.cpp  Seed.cpp  SeedChain.cpp  SeedString.cpp
test/data/: README.md
test/data/alignment/: ecoli_sample.m1  ecoli_sample.m5
test/data/query/: ecoli_sample.fasta  ecoli_sample.fastq
